--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					Welcome to my blog!<br>
 				</div><br><br>
 					<div class="picture">
-						<img src='Images/pic1.jpg' height="270" width="200" style="float:left;">
+						<img src='pic1.jpg' height="270" width="200" style="float:left;">
 					</div>
 				</div>
 				
